--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://77.70.22.73:3306/carpooling
+spring.datasource.url=jdbc:mysql://77.70.22.73:3306/carpooling?useSSL=false
 spring.datasource.username=zhivko
 spring.datasource.password=1234
