--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:mysql://77.70.22.73:3306/carpooling?useSSL=false
+#local ip: 192.168.88.51:3306
+#public ip: 77.70.22.73:3306
+
+spring.datasource.url=jdbc:mysql://192.168.88.51:3306/carpooling
 spring.datasource.username=zhivko
 spring.datasource.password=1234
