--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    compile group: 'org.webjars', name: 'jquery', version: '3.4.1'
 }
