Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,13 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'build'
-- task: Docker@2
-  inputs:
-    containerRegistry: 'Docker reg'
-    repository: 'carpooling'
-    command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+
+# - task: Docker@2
+#   inputs:
+#     containerRegistry: 'Docker reg'
+#     repository: 'carpooling'
+#     command: 'buildAndPush'
+#     Dockerfile: '**/Dockerfile'
 # - task: PublishPipelineArtifact@1
 #   inputs:
 #     targetPath: $(System.DefaultWorkingDirectory)
