--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,10 +21,16 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'build'
-- task: SonarQubePrepare@5
-  inputs:
-    SonarQube: 'sonarqube'
-    scannerMode: 'Other'
+
+#Sonar Scan
+- task: SonarQubeAnalyze@5
+
+# - task: SonarQubePrepare@5
+#   inputs:
+#     SonarQube: 'sonarqube'
+#     scannerMode: 'Other'
+
+
 # - task: Docker@2
 #   inputs:
 #     containerRegistry: 'Docker reg'
