--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -8,15 +8,32 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+# stages:
+#   - stage: BuildApp
+#     jobs:
+#       - job: BuildPushImage
+#         steps:
+#         - task: Docker@2
+#           inputs:
+#             containerRegistry: 'Docker reg'
+#             repository: 'carpooling'
+#             command: 'buildAndPush'
+#             Dockerfile: '**/Dockerfile'
+#             tags: '$(Build.BuildId)'
 stages:
-  - stage: BuildApp
-    jobs:
-      - job: BuildPushImage
-        steps:
-        - task: Docker@2
-          inputs:
-            containerRegistry: 'Docker reg'
-            repository: 'carpooling'
-            command: 'buildAndPush'
-            Dockerfile: '**/Dockerfile'
-            tags: '$(Build.BuildId)'
+- stage: Build
+  displayName: Build image
+  jobs:  
+  - job: Build
+    displayName: Build and push Docker image
+    steps:
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Hub'
+        command: 'Build an image'
+        dockerFile: '**/Dockerfile'
+        imageName: '$(ImageName)'
+        useDefaultContext: false
+        buildContext: 'CustomerApi'
+      displayName: 'Build the Docker image'
