--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -54,7 +54,14 @@ stages:
         # useDefaultContext: false
         # buildContext: 'CustomerApi'
         displayName: 'Build the Docker image'
-
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Hub'
+        command: 'Push an image'
+        imageName: '$(ImageName)'
+      condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+      displayName: 'Push the Docker image to Dockerhub'
 
 
 
