--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -51,7 +51,7 @@ stages:
     #   displayName: 'Push the Docker image to Dockerhub'
     - task: CopyFiles@2
       inputs:
-        SourceFolder: '$(Build.ArtifactStagingDirectory)/build/'
+        SourceFolder: ' $(Build.SourcesDirectory)/build/libs/*'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'     
     - task: PublishBuildArtifacts@1
       inputs:
