--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -51,8 +51,8 @@ stages:
     #   displayName: 'Push the Docker image to Dockerhub'
     - task: CopyFiles@2
       inputs:
-        SourceFolder: ' $(Build.SourcesDirectory)/build/libs/*'
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'     
+        SourceFolder: "$(Build.SourcesDirectory)/build/libs/*"
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
