--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,10 +1,5 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- development
+- master
 
 variables:
   ImageName: 'zhzhelev/carpooling:$(Build.BuildId)'
@@ -49,12 +44,15 @@ stages:
     #     imageName: '$(ImageName)'
     #   condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
     #   displayName: 'Push the Docker image to Dockerhub'
-    - task: CopyFiles@2
-      inputs:
-        SourceFolder: '$(Build.SourcesDirectory)/build/libs'
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-        publishLocation: 'Container'
+    
+
+    # For Delete
+    # - task: CopyFiles@2
+    #   inputs:
+    #     SourceFolder: '$(Build.SourcesDirectory)/build/libs'
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    # - task: PublishBuildArtifacts@1
+    #   inputs:
+    #     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    #     ArtifactName: 'drop'
+    #     publishLocation: 'Container'
