--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    compile 'mysql:mysql-connector-java'
+    compile 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     
-//    runtimeOnly 'mysql:mysql-connector-java'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'mysql:mysql-connector-java'
+//    runtimeOnly 'com.h2database:h2'
 
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 
@@ -45,5 +45,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     compile group: 'org.webjars', name: 'jquery', version: '3.4.1'
-    testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
+//    testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
