--- a/carpooling-deployment.yaml
+++ b/carpooling-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: carpooling-deployment
   labels:
-    app: carpooling
+    app: carpooling #key-value pair. Identifier which should be meaningful. Example "env" : "dev"
 spec:
   replicas: 2
   selector:
