--- a/carpooling-secret.yaml
+++ b/carpooling-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: carpooling-secret
 type: Opaque
 data:
-  db-username: c2E=
-  db-password: cGFzc3dvcmQ=
+  db-username: cm9vdA==
+  db-password: MTIzNA==
