--- a/carpooling-deployment.yaml
+++ b/carpooling-deployment.yaml
@@ -31,6 +31,11 @@ spec:
             secretKeyRef:
               name: carpooling-secret
               key: db-password
+        - name: SPRING.DATASOURCE.URL
+          valueFrom:
+            configMapKeyRef:
+              name: carpooling-config
+              key: mariadb-url
 ---
 apiVersion: v1
 kind: Service
