--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -24,26 +24,26 @@ stages:
         publishJUnitResults: true #temporary commented
         testResultsFiles: '**/TEST-*.xml'
         tasks: 'build'  
-    # - task: Docker@1      
-    #   inputs:
-    #     containerregistrytype: 'Container Registry'
-    #     dockerRegistryEndpoint: 'Docker Reg'
-    #     command: 'Build an image'
-    #     dockerFile: '**/Dockerfile'
-    #     # tags: 'zhzhelev/carpooling:1' #for delete
-    #     imageName: '$(ImageName)'
-    #     # useDefaultContext: false #for delete
-    #     # buildContext: 'CustomerApi' #for delete
-    #     displayName: 'Build the Docker image'
-    # - task: Docker@1      
-    #   inputs:
-    #     containerregistrytype: 'Container Registry'
-    #     dockerRegistryEndpoint: 'Docker Reg'
-    #     command: 'Push an image'
-    #     # tags: 'zhzhelev/carpooling:1' #for delete
-    #     imageName: '$(ImageName)'
-    #   condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-    #   displayName: 'Push the Docker image to Dockerhub'
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Reg'
+        command: 'Build an image'
+        dockerFile: '**/Dockerfile'
+        # tags: 'zhzhelev/carpooling:1' #for delete
+        imageName: '$(ImageName)'
+        # useDefaultContext: false #for delete
+        # buildContext: 'CustomerApi' #for delete
+        displayName: 'Build the Docker image'
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Reg'
+        command: 'Push an image'
+        # tags: 'zhzhelev/carpooling:1' #for delete
+        imageName: '$(ImageName)'
+      condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+      displayName: 'Push the Docker image to Dockerhub'
 
  #for delete
     # For Delete
