--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/carpooling?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #H2 database
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
 #spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
