--- a/carpooling-config.yaml
+++ b/carpooling-config.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: carpooling-configdata
-  data:
-    mariadb-url: db-service #mongo-service=db-service
+  name: carpooling-config
+data:
+  mariadb-url: mariadb-service
