--- a/carpooling-deployment.yaml
+++ b/carpooling-deployment.yaml
@@ -16,8 +16,12 @@ spec:
     spec:
       containers:
       - name: carpooling
-        image: carpooling:89
+        image: zhzhelev/carpooling:108
         imagePullPolicy: Never
+        resources:
+          limits:
+            memory: "256Mi"
+            cpu: "1500m"
         ports:
         - containerPort: 8080
         env:
@@ -49,4 +53,4 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-      nodePort: 30010
+      nodePort: 30000
