--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/carpooling?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect'
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #H2 database
