Update imageName variable

--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -7,7 +7,7 @@ trigger:
 - development
 
 variables:
-  ImageName: 'carpooling:$(Build.BuildId)'
+  ImageName: 'zhzhelev/carpooling:$(Build.BuildId)'
 
 pool:
   vmImage: ubuntu-latest
