--- a/kubernetes/mariadb-persistent.yaml
+++ b/kubernetes/mariadb-persistent.yaml
@@ -1,13 +1,29 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: PersistentVolumeClaim # Pods use PersistentVolumeClaims to request physical storage
 metadata:
   name: mariadb-pv-claim # name of PVC essential for identifying the storage data
+  namespace: carpooling
   labels:
-    app: mariadb
-    tier: database
+    app: mariadb-pv-claim
 spec:
   accessModes:
     - ReadWriteOnce   #This specifies the mode of the claim that we are trying to create.
   resources:
     requests:
       storage: 1Gi
+  volumeName: mariadb-pv-claim
+---
+apiVersion: v1
+kind: PersistentVolume #A hostPath PersistentVolume uses a file or directory on the Node to emulate network-attached storage.
+metadata:
+  name: mariadb-pv
+  labels:
+    app: mariadb-pv
+spec:
+  storageClassName: standard
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: /www/
