--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -18,6 +18,11 @@ stages:
   - job: Build
     displayName: Build and push Docker image
     steps:  
+    - task: SonarQubeAnalyze@5
+    - task: SonarQubePrepare@5
+      inputs:
+        SonarQube: 'sonarqube'
+        scannerMode: 'Other'
     # - task: SonarQubeAnalyze@5
     # - task: SonarQubePrepare@5
     #   inputs:
