--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -22,14 +22,9 @@ stages:
       inputs:
         SonarQube: 'sonarqube'
         scannerMode: 'Other'
-    # - task: SonarQubeAnalyze@5
-    # - task: SonarQubePrepare@5
-    #   inputs:
-    #     SonarQube: 'sonarqube'
-    #     scannerMode: 'Other'
-    # - task: SonarQubePublish@5
-    #   inputs:
-    #     pollingTimeoutSec: '300'
+    - task: SonarQubePublish@5
+      inputs:
+        pollingTimeoutSec: '300'
     - task: Gradle@2
       inputs:
         workingDirectory: ''
