--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -18,12 +18,7 @@ stages:
   - job: Build
     displayName: Build and push Docker image
     steps:  
-    - task: SonarQubePrepare@5
-      inputs:
-        SonarQube: 'sonarcloud-carpooling'
-        scannerMode: 'MSBuild'
-        projectKey: 'ZhivkoDevOpsProjects_Carpooling'
-        projectName: 'Carpooling'
+    - task: SonarQubeAnalyze@5
     - task: SonarQubePublish@5
       inputs:
         pollingTimeoutSec: '300'
