--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/carpooling?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/carpooling?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #H2 database
 #spring.datasource.driverClassName=org.h2.Driver
@@ -10,8 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.datasource.username=sa
 #spring.datasource.password=password
 
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
-
-spring.jpa.open-in-view=false
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=100MB
+#spring.servlet.multipart.max-request-size=100MB
+#spring.jpa.open-in-view=false
