--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -22,30 +22,30 @@ stages:
       inputs:
         SonarQube: 'sonarqube'
         scannerMode: 'Other'
-    # - task: Gradle@2
-    #   inputs:
-    #     workingDirectory: ''
-    #     gradleWrapperFile: 'gradlew'
-    #     gradleOptions: '-Xmx3072m'
-    #     javaHomeOption: 'JDKVersion'
-    #     jdkVersionOption: '1.8'
-    #     jdkArchitectureOption: 'x64'
-    #     publishJUnitResults: true
-    #     testResultsFiles: '**/TEST-*.xml'
-    #     tasks: 'build'  
-    # - task: Docker@1      
-    #   inputs:
-    #     containerregistrytype: 'Container Registry'
-    #     dockerRegistryEndpoint: 'Docker Reg'
-    #     command: 'Build an image'
-    #     dockerFile: '**/Dockerfile'
-    #     imageName: '$(ImageName)'
-    #     displayName: 'Build the Docker image'
-    # - task: Docker@1      
-    #   inputs:
-    #     containerregistrytype: 'Container Registry'
-    #     dockerRegistryEndpoint: 'Docker Reg'
-    #     command: 'Push an image'
-    #     imageName: '$(ImageName)'
-    #   condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-    #   displayName: 'Push the Docker image to Dockerhub'
+    - task: Gradle@2
+      inputs:
+        workingDirectory: ''
+        gradleWrapperFile: 'gradlew'
+        gradleOptions: '-Xmx3072m'
+        javaHomeOption: 'JDKVersion'
+        jdkVersionOption: '1.8'
+        jdkArchitectureOption: 'x64'
+        publishJUnitResults: true
+        testResultsFiles: '**/TEST-*.xml'
+        tasks: 'build'  
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Reg'
+        command: 'Build an image'
+        dockerFile: '**/Dockerfile'
+        imageName: '$(ImageName)'
+        displayName: 'Build the Docker image'
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Reg'
+        command: 'Push an image'
+        imageName: '$(ImageName)'
+      condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+      displayName: 'Push the Docker image to Dockerhub'
