--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -1,8 +1,4 @@
-# Gradle
-# Build your Java project and run tests with Gradle using a Gradle wrapper script.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
+# Build the project and run tests
 trigger:
 - development
 
@@ -13,23 +9,25 @@ pool:
   vmImage: ubuntu-latest
 stages:
 - stage: Build
-  displayName: Build image
+  displayName: Scan
   jobs:  
   - job: Build
-    displayName: Build and push Docker image
+    displayName: Buidl and push Docker image
     steps:  
     - task: Gradle@2
+      displayName: Gradle build
       inputs:
         workingDirectory: ''
         gradleWrapperFile: 'gradlew'
         gradleOptions: '-Xmx3072m'
         javaHomeOption: 'JDKVersion'
-        jdkVersionOption: '1.8'
+        jdkVersionOption: '1.11'
         jdkArchitectureOption: 'x64'
-        publishJUnitResults: true
+        publishJUnitResults: false
         testResultsFiles: '**/TEST-*.xml'
-        tasks: 'build'          
+        tasks: 'build'
     - task: SnykSecurityScan@1
+      displayName: Scan for security vulnerabilities
       inputs:
         serviceConnectionEndpoint: 'snyk'
         testType: 'app'
