--- a/k8s-dev/mysql-secrets.yaml
+++ b/k8s-dev/mysql-secrets.yaml
@@ -2,6 +2,7 @@ apiVersion : v1
 kind : Secret
 metadata:
   name : mysql-secrets
+  namespace: carpooling
 data:
   username : cm9vdA==
   password : cm9vdA==
