--- a/k8s-dev/docker-secrets.yaml
+++ b/k8s-dev/docker-secrets.yaml
@@ -4,7 +4,7 @@ data:
 kind: Secret
 metadata:
   creationTimestamp: "2023-01-25T15:24:28Z"
-  name: my-registry-key-two
+  name: docker-secrets
   namespace: default
   resourceVersion: "2878"
   uid: 59dabf28-ad47-4e13-acda-6d588f065bbb
