--- a/k8s-dev/mysql-config.yaml
+++ b/k8s-dev/mysql-config.yaml
@@ -2,6 +2,7 @@ apiVersion : v1
 kind : ConfigMap
 metadata:
   name : db-config
+  namespace: carpooling
 data:
   host : mysql
   dbName: carpooling
