--- a/k8s-dev/mysql-deployment.yaml
+++ b/k8s-dev/mysql-deployment.yaml
@@ -1,8 +1,8 @@
-# Define a 'Persistent Voulume Claim'(PVC) for Mysql Storage, dynamically provisioned by cluster
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim # name of PVC essential for identifying the storage data
+  namespace: carpooling
   labels:
     app: mysql
     tier: database
@@ -13,16 +13,16 @@ spec:
     requests:
       storage: 1Gi    #This will tell kubernetes about the amount of space we are trying to claim.
 ---
-# Configure 'Deployment' of mysql server
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
+  namespace: carpooling
   labels:
     app: mysql
     tier: database
 spec:
-  selector: # mysql Pod Should contain same labels
+  selector:
     matchLabels:
       app: mysql
       tier: database
@@ -69,6 +69,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql  # DNS name
+  namespace: carpooling
   labels:
     app: mysql
     tier: database
