--- a/k8s-dev/argocd-secrets.yaml
+++ b/k8s-dev/argocd-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argocd-secrets
+  name: private-repo
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
