Changed the namespace to carpooling

--- a/k8s-dev/docker-secrets.yaml
+++ b/k8s-dev/docker-secrets.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   creationTimestamp: "2023-01-25T15:24:28Z"
   name: docker-secrets
-  namespace: default
+  namespace: carpooling
   resourceVersion: "2878"
   uid: 59dabf28-ad47-4e13-acda-6d588f065bbb
 type: kubernetes.io/dockerconfigjson
