Update carpooling-azure-pipeline.yml for Azure Pipelines
Updated SonarQube input

--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -36,7 +36,7 @@ stages:
         projectName: carpooling
     - task: SonarQubePrepare@5
       inputs:
-        SonarQube: 'sonarqube'
+        SonarQube: 'sonarcloud-carpooling'
         scannerMode: 'Other'
     - task: SonarQubeAnalyze@5
     - task: SonarQubePublish@5
