--- a/k8s-dev/carpooling-deployment.yaml
+++ b/k8s-dev/carpooling-deployment.yaml
@@ -53,6 +53,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: carpooling-service
+  namespace: carpooling
 spec:
   selector:
     app: carpooling
